# fastapi-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_template/: app.py  cli.py  database.py  security.py
fastapi_template/models/: user.py
fastapi_template/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 4946b81725bb_initial.py
tests/: conftest.py  factories.py  test_db.py  test_security.py  test_users.py
