[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Rafael Gaitan <rafael.tgt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
psycopg = {extras = ["binary"], version = "^3.1.19"}
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.7"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"
ipython = "^8.25.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev fastapi_template/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_template -vv'
post_test = 'coverage html'

[tool.poetry.scripts]
fastapi_template = "fastapi_template.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
